# juila_c_interop_example

./: LICENSE  Project.toml  README.md  meson.build
include/dummy/: dummy.h
src/: InteropExample.jl  meson.build
src/dummy/: dummy.c  meson.build
test/: runtests.jl  test_c_interop.jl
